ft(user): Implement user can make a return trip request
- Create a middleware to validate user trip request details
- Create trip request repostiory to communicate with trip request table
- Create a controller to handle the business logic

[Finishes #167728024]
